# slides-to-video

./: .gitignore  README.md  app.py  editor.html  generate.py  presentation_script.md  pyproject.toml  script.md  server.py  tts_engines.py
examples/: example_script.md
src/: generate.py  server.py
web/: editor.html
