[project]
name = "slides-to-video"
version = "0.1.0"
description = "Generate narrated presentation videos from slides, a script, and a voice sample"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "soundfile",
    "torch>=2.6,<2.8",
    "torchaudio>=2.6,<2.8",
]

[dependency-groups]
chatterbox = ["chatterbox-tts"]
qwen3 = ["qwen-tts"]

[tool.uv]
conflicts = [
    [
        { group = "chatterbox" },
        { group = "qwen3" },
    ],
]
